# rust-tinkering

./: Cargo.toml  README  Tupfile  alignment.rs  beautify  enums.rs  foo.rs  hello_world.rs  music.rs  own.rs  sym.rs
omr/: Cargo.toml
omr/src/: main.rs
src/: closures.rs  geometry.rs  lib.rs  slices.rs  slices_iterators.rs  threads.rs
src/ignore/: alignment.rs  strings.rs
