[package]

name = "rust_omr"
version = "0.0.1"
authors = ["Andrew Wagner <drewm1980@gmail.com>"]

[dependencies.png]
git="https://github.com/servo/rust-png"

# [dependencies.stb_image]
# git="https://github.com/servo/rust-stb-image"

[lib]
name = "librust_omr"
path = "src/lib.rs"

[[bin]]
name = "recognize"
path = "src/main.rs"

